Fixed toList method