@@ -11,12 +11,13 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Component
 public class RestaurantDataAccessMapper {
 
     public List<UUID> restaurantToRestaurantProducts(Restaurant restaurant) {
-        return restaurant.getProducts().stream().map(product -> product.getId().getValue()).toList();
+        return restaurant.getProducts().stream().map(product -> product.getId().getValue()).collect(Collectors.toList());
     }
 
     public Restaurant restaurantEntityToRestaurant(List<RestaurantEntity> restaurantEntities) {
@@ -25,7 +26,7 @@ public class RestaurantDataAccessMapper {
                 .orElseThrow(() -> new RestaurantDataAccessException("Restaurant could not be found!"));
         List<Product> products = restaurantEntities.stream()
                 .map(entity -> new Product(new ProductId(entity.getProductId()), entity.getProductName(), new Money(entity.getProductPrice())))
-                .toList();
+                .collect(Collectors.toList());
 
         return Restaurant.builder()
                 .restaurantId(new RestaurantId(restaurant.getRestaurantId()))
