@@ -14,6 +14,7 @@ import org.springframework.stereotype.Component;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Component
@@ -39,7 +40,7 @@ public class OrderOutboxRepositoryImpl implements OrderOutboxRepository {
                         .orElseThrow(() -> new OrderOutboxNotFoundException("Approval outbox object can not be found for saga type " + sagaType))
                         .stream()
                         .map(orderOutboxDataAccessMapper::orderOutboxEntityToOrderOutboxMessage)
-                        .toList()
+                        .collect(Collectors.toList())
         );
     }
 
