@@ -13,6 +13,7 @@ import com.food.ordering.system.restaurant.service.domain.outbox.model.OrderEven
 import org.springframework.stereotype.Component;
 
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Component
 public class RestaurantDataMapper {
@@ -25,7 +26,7 @@ public class RestaurantDataMapper {
                                 product -> Product.builder()
                                         .productId(product.getId())
                                         .quantity(product.getQuantity())
-                                        .build()).toList())
+                                        .build()).collect(Collectors.toList()))
                         .totalAmount(new Money(restaurantApprovalRequest.getPrice()))
                         .orderStatus(OrderStatus.valueOf(restaurantApprovalRequest.getRestaurantOrderStatus().name()))
                         .build())
