@@ -11,6 +11,7 @@ import com.food.ordering.system.restaurant.service.domain.outbox.model.OrderEven
 import org.springframework.stereotype.Component;
 
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Component
 public class RestaurantMessagingDataMapper {
@@ -29,7 +30,7 @@ public class RestaurantMessagingDataMapper {
                                 .quantity(avroModel.getQuantity())
                                 .build()
                         )
-                        .toList()
+                        .collect(Collectors.toList())
                 )
                 .price(restaurantApprovalRequestAvroModel.getPrice())
                 .createdAt(restaurantApprovalRequestAvroModel.getCreatedAt())
